2008-03-20  Karl Berry  <karl@gnu.org>

	* info/info.c (main): avoid declaration after statement.

2008-03-17  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\xrefX): avoid TeX expansions of _ etc.
	in the info filename argument (#4).
	Report from Ralf Wildenhues, 15 Mar 2008 11:23:38.

2008-03-14  Karl Berry  <karl@gnu.org>

	* pretest 4.11.94.

	* install-info/install-info.c: portability fixes.
	(parse_dir_file): declare void, since it is.
	(split_entry): Remove unused variable ostream.
	(add_missing_basenames, add_missing_descriptions): Avoid
		declarations after statements.
	(main): Do not use // comments.
	(format_entry): avoid using isblank, linking fails on osf-alpha,
	others.
	* util/texi2dvi: use `...` instead of $(...).  Avoid
	(...) as case labels.

2008-03-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (exdent): typo in example.
	Report from Jaakko Hollmen, 11 Mar 2008 19:25:01.

2008-03-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (_scroll_backward): Avoid wrapping to the end of
	page when a backward scrolling is requested on the top node.
	Patch proposed by Benno Schulenberg.

2008-03-07  Karl Berry  <karl@gnu.org>

	* pretest 4.11.93.

	* info/infodoc.c (info_internal_help_text): reorder, regroup.
	Suggestion from Benno Schulenberg, 06 Mar 2008 11:59:06.

2008-03-07  Joseph Myers  <joseph@codesourcery.com>  (tiny change)

	* doc/texinfo.tex (\includezzz): Use \turnoffactive before
	expanding @value.

2008-03-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (info_search_internal): Reword wrap-around
	messages.
	* configure.ac (AM_INIT_AUTOMAKE): Finally remove dist-bzip2.

2008-03-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	* util/gendocs.sh: Pass --node-files to texi2html only together
	with the --split option.

	* info/session.c (last_node_p): Remove unused variable.
	(info_search_internal): Print a message if the search wraps over
	the end or beginning of the document.
